--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             max-width: 100%;
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5816082932921993" crossorigin="anonymous"></script> <!-- Add your AdSense script here -->
 </head>
 <body>
     <div class="container">
