--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
     .container {
       background-color: rgba(0, 0, 0, 0.8);
       border: 5px solid #8a5c2e;
-      padding: 20px;
+      padding: 10px;
       border-radius: 15px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-      margin: 50px auto;
+      margin: 30px auto;
       max-width: 800px;
       overflow: hidden;
     }
 
     .tab-content {
-      margin-top: 20px;
+      margin-top: 10px;
     }
 
     .nav-pills .nav-link {
-      font-size: 18px;
-      padding: 10px 10px;
+      font-size: 16px;
+      padding: 8px 8px;
       background-color: rgba(90, 57, 33, 0.8);
       border-radius: 0;
       border: 3px solid #8a5c2e;
@@ -45,11 +45,11 @@
     }
 
     .upgrade {
-      font-size: 18px;
+      font-size: 16px;
       color: #f7dfc4;
       background-color: #8a5c2e;
       border: 2px solid #5a3921;
-      padding: 15px;
+      padding: 10px;
       margin-bottom: 10px;
       cursor: pointer;
       transition: background-color 0.3s, color 0.3s;
@@ -65,48 +65,48 @@
       border: 5px solid #532c08;
       border-radius: 10px;
       width: 100%;
-      max-width: 300px; /* Adjust as needed */
+      max-width: 300px;
       height: auto;
     }
 
     .counter {
-      font-size: 20px;
+      font-size: 18px;
       margin-top: 10px;
     }
 
     .owned-upgrades {
-      margin-top: 20px;
+      margin-top: 15px;
     }
 
     .owned-upgrades div {
-      margin-bottom: 10px;
+      margin-bottom: 8px;
     }
 
     .skilling-upgrade {
-      margin-top: 20px;
+      margin-top: 15px;
     }
 
     .level-display {
-      margin-top: 10px;
+      margin-top: 8px;
     }
 
     .shop-upgrade {
-      margin-top: 20px;
+      margin-top: 15px;
     }
 
     .settings-options {
-      margin-top: 20px;
+      margin-top: 15px;
     }
 
     @media (max-width: 576px) {
       .nav-pills .nav-link {
-        font-size: 16px;
-        padding: 8px 8px;
+        font-size: 14px;
+        padding: 6px 6px;
       }
 
       .upgrade {
-        font-size: 16px;
-        padding: 12px;
+        font-size: 14px;
+        padding: 8px;
       }
     }
 
