--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     .container {
       background-color: rgba(0, 0, 0, 0.8);
       border: 5px solid #8a5c2e;
-      padding: 10px;
+      padding: 15px;
       border-radius: 15px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
       margin: 30px auto;
@@ -59,6 +59,11 @@
     .upgrade:hover {
       background-color: #5a3921;
       color: #ffcc00;
+    }
+
+    .castle-container {
+      margin-top: 20px;
+      text-align: center;
     }
 
     .castle-image {
@@ -121,7 +126,7 @@
     <div class="tab-content">
       <!-- Castle Tab -->
       <div class="tab-pane fade show active" id="castle-tab">
-        <div class="col-12 text-center">
+        <div class="col-12 text-center castle-container">
           <img id="castle" src="https://raw.githubusercontent.com/largefort/Medievalskilling/main/castle.png" alt="Castle" onclick="clickCastle()" class="castle-image">
           <div id="counter" class="counter">
             Gold coins: 0
