--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Medieval Clicker</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles.css">
   <style>
     body {
       font-family: 'MedievalFont', serif;
+      background-color: #251c12;
+      color: #f7dfc4;
       margin: 0;
       padding: 0;
     }
@@ -23,38 +26,113 @@
       overflow: hidden;
     }
 
-    /* Seasonal Themes */
-    body.winter {
-      background-image: url('winter_background.jpg'); /* Replace with actual winter background image URL */
-      color: #ffffff; /* Text color for winter theme */
+    .tab-content {
+      margin-top: 20px; /* Increased margin for better separation */
     }
 
-    body.spring {
-      background-image: url('spring_background.jpg'); /* Replace with actual spring background image URL */
-      color: #000000; /* Text color for spring theme */
+    .nav-pills .nav-link {
+      font-size: 16px;
+      padding: 10px 15px; /* Increased padding for better touch interaction */
+      background-color: rgba(90, 57, 33, 0.8);
+      border-radius: 5px; /* Slightly reduced border radius */
+      border: 3px solid #8a5c2e;
+      color: #f7dfc4;
     }
 
-    body.summer {
-      background-image: url('summer_background.jpg'); /* Replace with actual summer background image URL */
-      color: #000000; /* Text color for summer theme */
+    .nav-pills .nav-link.active {
+      background-color: rgba(60, 30, 15, 0.8);
+      color: #ffcc00;
+      font-weight: bold;
     }
 
-    body.autumn {
-      background-image: url('autumn_background.jpg'); /* Replace with actual autumn background image URL */
-      color: #ffffff; /* Text color for autumn theme */
+    .upgrade {
+      font-size: 16px;
+      color: #f7dfc4;
+      background-color: #8a5c2e;
+      border: 2px solid #5a3921;
+      padding: 10px;
+      margin-bottom: 10px;
+      cursor: pointer;
+      transition: background-color 0.3s, color 0.3s;
+      border-radius: 10px;
+    }
+
+    .upgrade:hover {
+      background-color: #5a3921;
+      color: #ffcc00;
+    }
+
+    .castle-container {
+      margin-top: 20px;
+      text-align: center;
+    }
+
+    .castle-image {
+      border: 5px solid #532c08;
+      border-radius: 10px;
+      width: 100%;
+      max-width: 300px;
+      height: auto;
+    }
+
+    .counter {
+      font-size: 18px;
+      margin-top: 10px;
+    }
+
+    .owned-upgrades {
+      margin-top: 15px;
+    }
+
+    .owned-upgrades div {
+      margin-bottom: 8px;
+    }
+
+    .skilling-upgrade {
+      margin-top: 15px;
+    }
+
+    .level-display {
+      margin-top: 8px;
+    }
+
+    .shop-upgrade {
+      margin-top: 15px;
+    }
+
+    .settings-options {
+      margin-top: 15px;
+    }
+
+    @media (max-width: 576px) {
+      .nav-pills .nav-link {
+        font-size: 14px;
+        padding: 8px 12px; /* Adjusted padding for smaller screens */
+      }
+
+      .upgrade {
+        font-size: 14px;
+        padding: 8px;
+      }
+    }
+
+    @font-face {
+      font-family: 'MedievalFont';
+      src: url('your-medieval-font.woff') format('woff');
     }
   </style>
 </head>
-<body class="summer"> <!-- Default to summer theme, replace with the appropriate season -->
-  <div class="container mt-5">
+<body>
+  <div class="container">
     <div class="tab-content">
+      <!-- Castle Tab -->
       <div class="tab-pane fade show active" id="castle-tab">
-        <div class="col-12 text-center">
+        <div class="col-12 text-center castle-container">
           <img id="castle" src="https://raw.githubusercontent.com/largefort/Medievalskilling/main/castle.png" alt="Castle" onclick="clickCastle()" class="castle-image">
-          <div id="counter">
+          <div id="counter" class="counter">
             Gold coins: 0
           </div>
-          <div id="owned-upgrades" class="mt-3">
+          <div id="owned-upgrades" class="owned-upgrades mt-3">
             <div>
               Knights: <span id="knight-count">0</span>
             </div>
@@ -70,16 +148,17 @@
           </div>
         </div>
       </div>
+      <!-- Skilling Tab -->
       <div class="tab-pane fade" id="skilling-tab">
         <div class="col-12 text-center">
           <h2>Skilling</h2>
-          <div class="upgrade" onclick="handleSkillingClick('woodcutting')">
+          <div class="upgrade skilling-upgrade" onclick="handleSkillingClick('woodcutting')">
             Woodcutting
           </div>
-          <div class="upgrade" onclick="handleSkillingClick('mining')">
+          <div class="upgrade skilling-upgrade" onclick="handleSkillingClick('mining')">
             Mining
           </div>
-          <div class="mt-3">
+          <div class="mt-3 level-display">
             <div>
               Woodcutting Level: <span id="woodcutting-level">1</span>
             </div>
@@ -89,31 +168,32 @@
           </div>
         </div>
       </div>
+      <!-- Shop Tab -->
       <div class="tab-pane fade" id="shop-tab">
         <div class="col-12 text-center">
           <h2>Shop</h2>
-          <div class="upgrade" onclick="buyUpgrade('knight')">
+          <div class="upgrade shop-upgrade" onclick="buyUpgrade('knight')">
             Knight (<span id="knight-cost">10</span> coins)
           </div>
           <audio id="knight-upgrade-sound">
             <source src="upgradesound.mp3" type="audio/mp3">
             Your browser does not support the audio element.
           </audio>
-          <div class="upgrade" onclick="buyUpgrade('archer')">
+          <div class="upgrade shop-upgrade" onclick="buyUpgrade('archer')">
             Archer (<span id="archer-cost">25</span> coins)
           </div>
           <audio id="archer-upgrade-sound">
             <source src="upgradesound.mp3" type="audio/mp3">
             Your browser does not support the audio element.
           </audio>
-          <div class="upgrade" onclick="buyUpgrade('wizard')">
+          <div class="upgrade shop-upgrade" onclick="buyUpgrade('wizard')">
             Wizard (<span id="wizard-cost">50</span> coins)
           </div>
           <audio id="wizard-upgrade-sound">
             <source src="upgradesound.mp3" type="audio/mp3">
             Your browser does not support the audio element.
           </audio>
-          <div class="upgrade" onclick="buyUpgrade('paladin')">
+          <div class="upgrade shop-upgrade" onclick="buyUpgrade('paladin')">
             Paladin (<span id="paladin-cost">100</span> coins)
           </div>
           <audio id="paladin-upgrade-sound">
@@ -122,15 +202,16 @@
           </audio>
         </div>
       </div>
+      <!-- Settings Tab -->
       <div class="tab-pane fade" id="settings-tab">
         <div class="col-12 text-center">
           <h2>Settings</h2>
-          <div class="form-check">
+          <div class="form-check settings-options">
             <label class="form-check-label">
               <input type="checkbox" id="toggle-music"> Toggle Music
             </label>
           </div>
-          <div class="form-check">
+          <div class="form-check settings-options">
             <label class="form-check-label">
               <input type="checkbox" id="toggle-sfx"> Toggle Sound Effects
             </label>
@@ -138,6 +219,7 @@
         </div>
       </div>
     </div>
+    <!-- Navigation Tabs -->
     <div class="nav nav-pills nav-fill fixed-bottom">
       <a class="nav-link active" data-toggle="pill" href="#castle-tab">Castle</a>
       <a class="nav-link" data-toggle="pill" href="#skilling-tab">Skilling</a>
@@ -145,17 +227,10 @@
       <a class="nav-link" data-toggle="pill" href="#settings-tab">Settings</a>
     </div>
   </div>
-  <button id="fullscreen-button" style="display: none;" onclick="autoEnterFullscreen()">
-    Enter Fullscreen
-  </button>
+  <!-- Add your fullscreen button and scripts here -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="script.js"></script>
-  <audio id="medievaltheme" loop autoplay>
-    <source src="medievaltheme.mp3" type="audio/mp3">
-    Your browser does not support the audio element.
-  </audio>
-  <audio id="click-sound" src="click-sound.mp3" type="audio/mp3"></audio>
 </body>
 </html>
