--- a/index.html
+++ b/index.html
@@ -27,29 +27,30 @@
     }
 
     .tab-content {
-      margin-top: 20px; /* Increased margin for better separation */
+      margin-top: 20px;
     }
 
     .nav-pills .nav-link {
       font-size: 16px;
-      padding: 10px 15px; /* Increased padding for better touch interaction */
-      background-color: rgba(90, 57, 33, 0.8);
-      border-radius: 5px; /* Slightly reduced border radius */
-      border: 3px solid #8a5c2e;
-      color: #f7dfc4;
+      padding: 10px 15px;
+      background-color: #8a5c2e; /* Medieval Brown */
+      border-radius: 5px;
+      border: 3px solid #5a3921; /* Dark Brown */
+      color: #ffcc00; /* Gold */
+      transition: background-color 0.3s, color 0.3s;
     }
 
     .nav-pills .nav-link.active {
-      background-color: rgba(60, 30, 15, 0.8);
-      color: #ffcc00;
+      background-color: #5a3921; /* Dark Brown */
+      color: #ffcc00; /* Gold */
       font-weight: bold;
     }
 
     .upgrade {
       font-size: 16px;
-      color: #f7dfc4;
-      background-color: #8a5c2e;
-      border: 2px solid #5a3921;
+      color: #f7dfc4; /* Light Beige */
+      background-color: #8a5c2e; /* Medieval Brown */
+      border: 2px solid #5a3921; /* Dark Brown */
       padding: 10px;
       margin-bottom: 10px;
       cursor: pointer;
@@ -58,8 +59,8 @@
     }
 
     .upgrade:hover {
-      background-color: #5a3921;
-      color: #ffcc00;
+      background-color: #5a3921; /* Dark Brown */
+      color: #ffcc00; /* Gold */
     }
 
     .castle-container {
@@ -70,8 +71,7 @@
     .castle-image {
       border: 5px solid #532c08;
       border-radius: 10px;
-      width: 100%;
-      max-width: 300px;
+      max-width: 100%;
       height: auto;
     }
 
@@ -107,7 +107,7 @@
     @media (max-width: 576px) {
       .nav-pills .nav-link {
         font-size: 14px;
-        padding: 8px 12px; /* Adjusted padding for smaller screens */
+        padding: 8px 12px;
       }
 
       .upgrade {
@@ -127,30 +127,36 @@
     <div class="tab-content">
       <!-- Castle Tab -->
       <div class="tab-pane fade show active" id="castle-tab">
-        <div class="col-12 text-center castle-container">
+        <div class="text-center castle-container">
           <img id="castle" src="https://raw.githubusercontent.com/largefort/Medievalskilling/main/castle.png" alt="Castle" onclick="clickCastle()" class="castle-image">
           <div id="counter" class="counter">
             Gold coins: 0
           </div>
           <div id="owned-upgrades" class="owned-upgrades mt-3">
-            <div>
-              Knights: <span id="knight-count">0</span>
-            </div>
-            <div>
-              Archers: <span id="archer-count">0</span>
-            </div>
-            <div>
-              Wizards: <span id="wizard-count">0</span>
-            </div>
-            <div>
-              Paladins: <span id="paladin-count">0</span>
+            <div class="d-flex justify-content-around">
+              <div class="text-center">
+                <span class="d-block">Knights</span>
+                <span id="knight-count">0</span>
+              </div>
+              <div class="text-center">
+                <span class="d-block">Archers</span>
+                <span id="archer-count">0</span>
+              </div>
+              <div class="text-center">
+                <span class="d-block">Wizards</span>
+                <span id="wizard-count">0</span>
+              </div>
+              <div class="text-center">
+                <span class="d-block">Paladins</span>
+                <span id="paladin-count">0</span>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <!-- Skilling Tab -->
       <div class="tab-pane fade" id="skilling-tab">
-        <div class="col-12 text-center">
+        <div class="text-center">
           <h2>Skilling</h2>
           <div class="upgrade skilling-upgrade" onclick="handleSkillingClick('woodcutting')">
             Woodcutting
@@ -159,18 +165,20 @@
             Mining
           </div>
           <div class="mt-3 level-display">
-            <div>
-              Woodcutting Level: <span id="woodcutting-level">1</span>
+            <div class="text-center">
+              <span class="d-block">Woodcutting Level</span>
+              <span id="woodcutting-level">1</span>
             </div>
-            <div>
-              Mining Level: <span id="mining-level">1</span>
+            <div class="text-center">
+              <span class="d-block">Mining Level</span>
+              <span id="mining-level">1</span>
             </div>
           </div>
         </div>
       </div>
       <!-- Shop Tab -->
       <div class="tab-pane fade" id="shop-tab">
-        <div class="col-12 text-center">
+        <div class="text-center">
           <h2>Shop</h2>
           <div class="upgrade shop-upgrade" onclick="buyUpgrade('knight')">
             Knight (<span id="knight-cost">10</span> coins)
@@ -204,7 +212,7 @@
       </div>
       <!-- Settings Tab -->
       <div class="tab-pane fade" id="settings-tab">
-        <div class="col-12 text-center">
+        <div class="text-center">
           <h2>Settings</h2>
           <div class="form-check settings-options">
             <label class="form-check-label">
@@ -219,13 +227,21 @@
         </div>
       </div>
     </div>
-    <!-- Navigation Tabs -->
-    <div class="nav nav-pills nav-fill fixed-bottom">
-      <a class="nav-link active" data-toggle="pill" href="#castle-tab">Castle</a>
-      <a class="nav-link" data-toggle="pill" href="#skilling-tab">Skilling</a>
-      <a class="nav-link" data-toggle="pill" href="#shop-tab">Shop</a>
-      <a class="nav-link" data-toggle="pill" href="#settings-tab">Settings</a>
-    </div>
+    <!-- Navigation Tabs (Using Bootstrap 4 Classes) -->
+    <ul class="nav nav-pills nav-fill fixed-bottom">
+      <li class="nav-item">
+        <a class="nav-link active" data-toggle="pill" href="#castle-tab">Castle</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="pill" href="#skilling-tab">Skilling</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="pill" href="#shop-tab">Shop</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="pill" href="#settings-tab">Settings</a>
+      </li>
+    </ul>
   </div>
   <!-- Add your fullscreen button and scripts here -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
