--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     @font-face {
       font-family: 'MedievalFont';
-      src: url('your-medieval-font.woff') format('woff');
+      src: url('medievalfont.woff') format('woff');
     }
   </style>
 </head>
