--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
       }
     }
 
-    @font-face {
-      font-family: 'MedievalFont';
-      src: url('medievalfont.woff') format('woff');
+   @font-face {
+  font-family: 'MedievalFont';
+  src: url('https://raw.githubusercontent.com/largefort/medievalclicker/main/medievalfont.woff') format('woff');
+}
     }
   </style>
 </head>
