--- a/index.html
+++ b/index.html
@@ -116,10 +116,9 @@
       }
     }
 
-   @font-face {
-  font-family: 'MedievalFont';
-  src: url('https://raw.githubusercontent.com/largefort/medievalclicker/main/medievalfont.woff') format('woff');
-}
+    @font-face {
+      font-family: 'MedievalFont';
+      src: url('https://raw.githubusercontent.com/largefort/medievalclicker/main/medievalfont.woff') format('woff');
     }
   </style>
 </head>
@@ -155,6 +154,19 @@
           </div>
         </div>
       </div>
+     <!-- Ad Container -->
+<div id="ad-container">
+  <!-- Google AdSense ad code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="your-ad-client-id"
+       data-ad-slot="your-ad-slot-id"
+       data-ad-format="auto"></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
       <!-- Skilling Tab -->
       <div class="tab-pane fade" id="skilling-tab">
         <div class="text-center">
